--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.client.enabled=false
+
+app.jwt.secret=RandomSecretKeyAiuda@3312!
+app.jwt.expiration-in-ms=8640000 // un dia
